# codex-auto

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  examples.md  orchestrator-roadmap.md  recovery.md  routing.md  security.md  troubleshooting.md  validation.md
docs/superpowers/specs/: 2026-07-13-codex-auto-design.md
src/codex_auto/: __init__.py  __main__.py  cli.py  config.py  interfaces.py  orchestrator.py  paths.py  recovery_resume.py
src/codex_auto/codex/: __init__.py  capabilities.py  command.py  events.py  executor.py  prompts.py  result.py  reviewer.py  schemas.py
src/codex_auto/domain/: __init__.py  decisions.py  enums.py  failures.py  fingerprint.py  models.py  policy.py  progress.py  routing.py  state_machine.py
src/codex_auto/git/: __init__.py  patch.py  repository.py  worktree.py
src/codex_auto/persistence/: __init__.py  artifacts.py  migrations.py  recovery.py  sqlite.py
src/codex_auto/process/: __init__.py  identity.py  loop.py  output.py  posix.py  posix_watchdog.py  supervisor.py  windows.py
src/codex_auto/reporting/: __init__.py  redaction.py  report.py  stats.py
src/codex_auto/validation/: __init__.py  comparison.py  config.py  result.py  runner.py  sandbox.py
tests/fake_codex/: fake_codex.py
tests/integration/: test_cli_commands.py  test_cli_entrypoints.py  test_fake_codex.py  test_orchestrator.py
tests/unit/: test_cli.py  test_config.py  test_version.py
tests/unit/codex/: test_capabilities_command.py  test_events_result_prompt.py  (+1 more)
(+15 files in other folders)
