[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-auto"
version = "0.1.0"
description = "Deterministic validation-driven orchestration for Codex"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "codex-auto contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/git-geeky/codex-auto"
Repository = "https://github.com/git-geeky/codex-auto.git"
Issues = "https://github.com/git-geeky/codex-auto/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5",
  "ruff>=0.9",
]

[project.scripts]
codex-auto = "codex_auto.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "real_codex: opt-in tests that may consume Codex quota and are skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["codex_auto"]
mypy_path = "src"
